@@ -1,19 +1,20 @@
 /*-
  * ============LICENSE_START=======================================================
  *  Copyright (C) 2016-2018 Ericsson. All rights reserved.
+ *  Modifications Copyright (C) 2020 Nordix Foundation.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- * 
+ *
  * SPDX-License-Identifier: Apache-2.0
  * ============LICENSE_END=========================================================
  */
@@ -52,7 +53,6 @@ public class CarrierTechnologyParametersJsonAdapter
     private static final String VALUE_TAG = "\" value \"";
     private static final String CARRIER_TECHNOLOGY_PREAMBLE = "carrier technology \"";
 
-
     private static final String PARAMETER_CLASS_NAME = "parameterClassName";
 
     private static final String CARRIER_TECHNOLOGY_TOKEN = "carrierTechnology";
@@ -62,8 +62,7 @@ public class CarrierTechnologyParametersJsonAdapter
     private static final Map<String, String> BUILT_IN_CARRIER_TECHNOLOGY_PARMETER_CLASS_MAP = new HashMap<>();
 
     static {
-        BUILT_IN_CARRIER_TECHNOLOGY_PARMETER_CLASS_MAP.put("FILE",
-                FileCarrierTechnologyParameters.class.getName());
+        BUILT_IN_CARRIER_TECHNOLOGY_PARMETER_CLASS_MAP.put("FILE", FileCarrierTechnologyParameters.class.getName());
         BUILT_IN_CARRIER_TECHNOLOGY_PARMETER_CLASS_MAP.put("EVENT_REQUESTOR",
                 EventRequestorCarrierTechnologyParameters.class.getName());
     }
@@ -151,8 +150,8 @@ public class CarrierTechnologyParametersJsonAdapter
             // OK no parameters for the carrier technology have been specified, just instantiate the
             // default parameters
             try {
-                carrierTechnologyParameters =
-                        (CarrierTechnologyParameters) carrierTechnologyParameterClass.newInstance();
+                carrierTechnologyParameters = (CarrierTechnologyParameters) carrierTechnologyParameterClass
+                        .getDeclaredConstructor().newInstance();
             } catch (final Exception e) {
                 final String errorMessage = "could not create default parameters for carrier technology \""
                         + carrierTechnologyLabel + "\"\n" + e.getMessage();
@@ -164,11 +163,11 @@ public class CarrierTechnologyParametersJsonAdapter
         // Check that the carrier technology label matches the label in the carrier technology
         // parameters object
         if (!carrierTechnologyParameters.getLabel().equals(carrierTechnologyLabel)) {
-            final String errorMessage = CARRIER_TECHNOLOGY_PREAMBLE + carrierTechnologyLabel
-                            + "\" does not match plugin \""
-                    + carrierTechnologyParameters.getLabel() + "\" in \"" + carrierTechnologyParameterClassName
-                    + "\", specify correct carrier technology parameter plugin in parameter \"" + PARAMETER_CLASS_NAME
-                    + "\"";
+            final String errorMessage =
+                    CARRIER_TECHNOLOGY_PREAMBLE + carrierTechnologyLabel + "\" does not match plugin \""
+                            + carrierTechnologyParameters.getLabel() + "\" in \"" + carrierTechnologyParameterClassName
+                            + "\", specify correct carrier technology parameter plugin in parameter \""
+                            + PARAMETER_CLASS_NAME + "\"";
             LOGGER.warn(errorMessage);
             throw new ParameterRuntimeException(errorMessage);
         }
